initial Vercel deployment

--- a/env.example
+++ b/env.example
@@ -6,7 +6,10 @@ DEBUG=True
 SECRET_KEY=w(edxxqva6++35*(n!xq(33k2i37=wq^2r8(mynk%yql36u&hw
 
 # https://docs.djangoproject.com/en/5.0/ref/settings/#std-setting-DATABASES
-DB_NAME=/full/path/to/the/database/file.sqlite3
+POSTGRES_DATABASE=polls
+POSTGRES_USER=dbuser
+POSTGRES_PASSWORD=dbpassword
+POSTGRES_HOST=localhost
 
 # https://docs.djangoproject.com/en/5.0/ref/settings/#std-setting-STATIC_URL
 STATIC_URL=static/
