change name to avoid conflict

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = django-polls
+name = django-polls-azol
 version = 0.1
 description = A Django app to conduct web-based polls.
 long_description = file: README.rst
