GitHub Actions workflow: deploy static files to GitHub Pages
https://docs.github.com/en/pages/getting-started-with-github-pages/using-custom-workflows-with-github-pages

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI/CD
 
 on:
   push:
@@ -32,3 +32,27 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - run: pip install -r requirements.txt
       - run: python manage.py test
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - run: pip install -r requirements.txt
+      - run: STATIC_ROOT=_site/static/ python manage.py collectstatic --noinput --clear
+      - uses: actions/upload-pages-artifact@v3
+
+  deploy-static:
+    runs-on: ubuntu-latest
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    steps:
+      - uses: actions/deploy-pages@v4
