--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,3 +56,36 @@ jobs:
 
     steps:
       - uses: actions/deploy-pages@v4
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: test
+
+    permissions:
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ghcr.io/${{ github.repository }}
+      - uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/386,linux/ppc64le
+          annotations: ${{ steps.meta.outputs.annotations }}
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          outputs: type=registry,annotation-index.org.opencontainers.image.description=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.description'] }}
+          # https://github.com/orgs/community/discussions/45969
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
