switch to PostgreSQL
https://docs.djangoproject.com/en/5.0/ref/databases/
https://docs.github.com/en/actions/use-cases-and-examples/using-containerized-services/creating-postgresql-service-containers

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,31 @@
 services:
+  postgres:
+    restart: always
+    image: postgres:alpine
+    expose:
+      - 5432
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-dbpass}
+
   django:
     restart: always
     build: .
     expose:
       - 8000
     volumes:
-      - db-data:/db
       - static-data:/app/static
+    depends_on:
+      - postgres
     environment:
       - DEBUG=${DEBUG:-False}
       - SECRET_KEY
       - STATIC_URL=${STATIC_URL:-static/}
-      - DB_NAME=${DB_NAME:-/db/db.sqlite3}
+      - POSTGRES_DATABASE=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-dbpass}
+      - POSTGRES_HOST=postgres
       - DJANGO_SUPERUSER_USERNAME=${DJANGO_SUPERUSER_USERNAME:-admin}
       - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL:-admin@example.com}
       - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
